k8s/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: syspulse
  labels:
    name: syspulse
    app.kubernetes.io/managed-by: kubectl
